# lidar_classification

./: .gitignore  LICENSE  README.md  pyproject.toml  tmp.README.md
.github/workflows/: ruff_check.yml
config/: config_cnn.yml  config_convnext.yml  config_efficientnet.yml  config_resnet.yml  config_vgg16.yml  config_vit.yml
data/processed/: README.md
data/raw/shapefile/emodnet/hel_gdansk_data/: coastal_type_20210501_0025_80k_150k.dbf  coastal_type_20210501_0025_80k_150k.shp  coastal_type_20210501_0025_80k_150k.shx  coastal_type_20210501_005_150k_250k.dbf  coastal_type_20210501_005_150k_250k.shp  coastal_type_20210501_005_150k_250k.shx  coastal_type_20210501_015_350k_450k.dbf  coastal_type_20210501_015_350k_450k.shp  coastal_type_20210501_015_350k_450k.shx  coastal_type_20210501_01_250k_350k.dbf  coastal_type_20210501_01_250k_350k.shp  coastal_type_20210501_01_250k_350k.shx  coastal_type_20210501_02_450k_650k.dbf  coastal_type_20210501_02_450k_650k.shp  coastal_type_20210501_02_450k_650k.shx  coastal_type_20210501_05_650k_1250k.dbf  coastal_type_20210501_05_650k_1250k.shp  coastal_type_20210501_05_650k_1250k.shx  coastal_type_20210501_0_80k.dbf  coastal_type_20210501_0_80k.shp  coastal_type_20210501_0_80k.shx  coastal_type_20210501_1_1250k_3m.dbf  (+5 more)
notebooks/: 01_data_exploration.ipynb  02_coords_transformation.ipynb  03_merging_data.ipynb  04_different_coastal_type.ipynb
src/data_preparation/: constants.py  data_preprocessing_utils.py  organize_data.py  prepare_data.py
src/training/: dataloaders.py  metrics.py  models.py  optimizers_and_schedulers.py  train.py  train_utils.py
