[project]
name = "lidar-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contextily>=1.6.2",
    "geopandas>=1.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "xyzservices>=2025.1.0",
]


[tool.ruff]
line-length = 120

target-version = "py312"
